--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 ---
 layout: home
-title: My website
-subtitle: This is where I will tell my friends way too much about me
+title: Tania's Blog
+subtitle: Passionate, dedicated, and committed individual learning new advancements within the technology sector.
 ---
